--- a/task3.html
+++ b/task3.html
@@ -7,17 +7,23 @@
 </head>
 <body>
 <div>
-    <div class="img"><img src="img/arrow.png"></div>
+    <div class="arrow">
+        <img src="img/arrow.png"></div>
 </div>
 <div>
-    <h1><img scr="img/ppt.png"></h1>
+    <div class="headlogo">
+        <img src="img/headlogo.png"style="width:130px"></div>
 </div>
-<p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具</p>
-<div class="footer">
-    <div class="bluelogo"><img src="img/bluelogo.png" alt="" style="width: 45px"></div>
-        <p>1162553773</p>
-    <div class="pptlogo"><img src="img/pptlogo.png"> style="width:45px"></div>
-    <p>BJPPT</p>
+<h1>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</h1>
+<div>
+    <div class="xueyuan">
+        <img src="img/xueyuan.png" style="width:45px"><p>116257377</p></div>
+    </div>
+</div>
+<div>
+    <div class="contentlogo">
+        <img src="img/contentlogo.png" style="width:45px"><p>BJPPTeng</p></div>
+</div>
 </div>
 </body>
 </html>
