--- a/task4.html
+++ b/task4.html
@@ -7,8 +7,22 @@
 </head>
 <body>
 <header>
-a
+    <a class="a2">注册</a>
+    <a class="a1">关闭</a>
+    <h2>登陆</h2>
 </header>
+<main>
+<div class="content">
+    <form class="login">
+        <div class="login-row"><input type="text" placeholder="请输入手机号"/></div>
+        <div class="login-row"><input type="text" placeholder="请输入密码"/></div>
+        <button type="button" class="bt" >登陆</button>
+    </form>
+</div>
+    <div class="ff">忘记密码？</div>
+
+</main>
+
 
 </body>
 </html>
