--- a/task4.html
+++ b/task4.html
@@ -14,12 +14,12 @@
 <main>
 <div class="content">
     <form class="login">
-        <div class="login-row"><input type="text" placeholder="请输入手机号"/></div>
-        <div class="login-row"><input type="text" placeholder="请输入密码"/></div>
+        <input type="text" placeholder="请输入手机号"/>
+        <input type="password" placeholder="请输入密码"/>
         <button type="button" class="bt" >登陆</button>
     </form>
 </div>
-    <div class="ff">忘记密码？</div>
+    <div class="ff"><a href="#">忘记密码?<a/></div>
 
 </main>
 
