--- a/task4.html
+++ b/task4.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>login</title>
     <link rel="stylesheet" type="text/css" href="css/task4.css"/>
 </head>
@@ -19,10 +20,9 @@
         <button type="button" class="bt" >登陆</button>
     </form>
 </div>
-    <div class="ff"><a href="#">忘记密码?<a/></div>
-
+    <div class="tt">
+        <a href="#">忘记密码?<a/>
+    </div>
 </main>
-
-
 </body>
 </html>
