--- a/task4.html
+++ b/task4.html
@@ -8,21 +8,20 @@
 </head>
 <body>
 <header>
-    <a class="a2">注册</a>
-    <a class="a1">关闭</a>
-    <h2>登陆</h2>
+    <a href="#" class="a2">注册</a>
+    <a href="#" class="a3">登录</a>
+        <a href="#" class="a1">关闭</a>
+
 </header>
 <main>
 <div class="content">
     <form class="login">
-        <input type="text" placeholder="请输入手机号"/>
-        <input type="password" placeholder="请输入密码"/>
-        <button type="button" class="bt" >登陆</button>
+        <div class="login1"><input type="text" placeholder="请输入手机号"/></div>
+        <div class="login1"><input type="password" placeholder="请输入密码"/></div>
+        <button class="button1">登录</button>
+        <p class="code"><a href="">忘记密码</a></p>
     </form>
 </div>
-    <div class="tt">
-        <a href="#">忘记密码?<a/>
-    </div>
-</main>
+   </main>
 </body>
 </html>
