--- a/task6.html
+++ b/task6.html
@@ -2,9 +2,95 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Title</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/task6.css"/>
+    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<header>
+    <button class="bt1 btn btn-default">找雇主</button>
+    <button class="bt2 btn btn-default">找护工</button>
+</header>
+<div class="dp">
+    <div class="dp-cell">
+        <ul class="nav nav-pills nav-justified">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">所在地</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">北京</a></li>
+                    <li><a href="#">通州</a></li>
+                    <li><a href="#">大兴</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="dp-cell">
+        <ul class="nav nav-pills nav-justified">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">食宿</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">管吃</a></li>
+                    <li><a href="#">管住</a></li>
+                    <li><a href="#">管吃住</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="dp-cell">
+        <ul class="nav nav-pills nav-justified">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">病人情况</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">老人</a></li>
+                    <li><a href="#">小孩</a></li>
+                    <li><a href="#">婴儿</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="content">
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time">
+            <span class="time1">2015-7-5至2015-7-12</span>
+            <span class="price">35元/小时</span>
+        </div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+</div>
+<footer>
+    <a class="back" href="#">返回</a>
+    <a class="write" href="#"></a>
+    <a class="mine" href="#">我的</a>
+</footer>
 </body>
 </html>
