--- a/task6.html
+++ b/task6.html
@@ -82,6 +82,16 @@
         <div class="location"><p>北京.通州.果园</p></div>
     </div>
     <div class="textarea">
+    <div class="date"><p>服务日期</p></div>
+    <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+    <div class="location"><p>北京.通州.果园</p></div>
+</div>
+    <div class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </div>
+    <div class="textarea">
         <div class="date"><p>服务日期</p></div>
         <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
         <div class="location"><p>北京.通州.果园</p></div>
