--- a/task6.html
+++ b/task6.html
@@ -53,52 +53,52 @@
     </div>
 </div>
 <div class="content">
-    <div class="textarea">
+    <li class="textarea">
         <div class="date"><p>服务日期</p></div>
         <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
         <div class="location"><p>北京.通州.果园</p></div>
-    </div>
-    <div class="textarea">
+    </li>
+    <li class="textarea">
         <div class="date"><p>服务日期</p></div>
         <div class="time">
             <span class="time1">2015-7-5至2015-7-12</span>
-            <span class="price">35元/小时</span>
+            <span class="price">45元/小时</span>
         </div>
         <div class="location"><p>北京.通州.果园</p></div>
-    </div>
-    <div class="textarea">
+    </li>
+    <li class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">15元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </li>
+    <li class="textarea">
+        <div class="date"><p>服务日期</p></div>
+        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">55元/小时</span></div>
+        <div class="location"><p>北京.通州.果园</p></div>
+    </li>
+    <li class="textarea">
         <div class="date"><p>服务日期</p></div>
         <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
         <div class="location"><p>北京.通州.果园</p></div>
-    </div>
-    <div class="textarea">
-        <div class="date"><p>服务日期</p></div>
-        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
-        <div class="location"><p>北京.通州.果园</p></div>
-    </div>
-    <div class="textarea">
-        <div class="date"><p>服务日期</p></div>
-        <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
-        <div class="location"><p>北京.通州.果园</p></div>
-    </div>
-    <div class="textarea">
+    </li>
+    <li class="textarea">
     <div class="date"><p>服务日期</p></div>
     <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
     <div class="location"><p>北京.通州.果园</p></div>
-</div>
-    <div class="textarea">
+</li>
+    <li class="textarea">
         <div class="date"><p>服务日期</p></div>
         <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
         <div class="location"><p>北京.通州.果园</p></div>
-    </div>
-    <div class="textarea">
+    </li>
+    <li class="textarea">
         <div class="date"><p>服务日期</p></div>
         <div class="time"><span class="time1">2015-7-5至2015-7-12</span><span class="price">35元/小时</span></div>
         <div class="location"><p>北京.通州.果园</p></div>
-    </div>
+    </li>
 </div>
 <footer>
-    <a class="back" href="#">返回</a>
+    <a class="back" href="#">首页</a>
     <a class="write" href="#"></a>
     <a class="mine" href="#">我的</a>
 </footer>
