--- a/pratice.html
+++ b/pratice.html
@@ -1,15 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="css/practice.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>task7-3</title>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/practice.css">
 </head>
+
 <body>
-
-<div>
-<div class="wrapper"><img src="img/timg"></div>
+<div class="header">
+    <a class="menu" href="https://qiutiancheng.github.io/githubtask/task/task7/task7-1.html"></a>
+    <span>投票</span>
+    <a class="cancel" href="#"></a>
 </div>
-
+<div class="body">
+    <div class="music">
+        <p>发言结束讨论后请大家结束投票
+            <audio class="audio" controls="controls" autoplay="autoplay" >
+                <source src="img/1822841617.mp3">
+            </audio>
+            <span class="areuok"></span>
+        </p>
+        <div class="triangle"></div>
+    </div>
+    <p class="text">点击得票数最多人的头像</p>
+    <div class="flex">
+        <ul class="content">
+            <li class="item">
+                <p class="id">狙击手</p>
+                <p class="num">1号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">2号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">3号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">4号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">5号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">6号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">7号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">8号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">9号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">10号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">11号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+            <li class="item">
+                <p class="id">水民</p>
+                <p class="num">12号</p>
+                <div class="wrap">
+                    <a href="#" class="select1"><img class="photo1" src="img/kill.png" alt="1"></a>
+                    <a href="#" class="select2"><img class="photo2" src="img/check.png" alt="1"></a>
+                    <a href="#" class="select3"><img class="photo3" src="img/scope.png" alt="1"></a>
+                    <a href="#" class="select4"><img class="photo4" src="img/save.png" alt="1"></a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="footer">
+    <button class="btn btn-block" onClick="location.href='https://qiutiancheng.github.io/githubtask/task/task7/task7-2.html'">
+        投死
+    </button>
+</div>
 </body>
+
 </html>
