--- a/task6.html
+++ b/task6.html
@@ -19,7 +19,7 @@
         <ul class="nav nav-pills nav-justified">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">所在地</a>
-                <ul class="dropdown-menu">
+                <ul class="scc dropdown-menu">
                     <li><a href="#">北京</a></li>
                     <li><a href="#">通州</a></li>
                     <li><a href="#">大兴</a></li>
@@ -31,7 +31,7 @@
         <ul class="nav nav-pills nav-justified">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">食宿</a>
-                <ul class="dropdown-menu">
+                <ul class="scc dropdown-menu">
                     <li><a href="#">管吃</a></li>
                     <li><a href="#">管住</a></li>
                     <li><a href="#">管吃住</a></li>
@@ -43,7 +43,7 @@
         <ul class="nav nav-pills nav-justified">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">病人情况</a>
-                <ul class="dropdown-menu">
+                <ul class="scc dropdown-menu">
                     <li><a href="#">老人</a></li>
                     <li><a href="#">小孩</a></li>
                     <li><a href="#">婴儿</a></li>
