--- a/task7-2.html
+++ b/task7-2.html
@@ -17,8 +17,10 @@
     </header>
 <main>
 <div class="vote1">
-    发言讨论结束，请大家投票<audio class="audio" controls="controls" autoplay="autoplay" ><source src="img/我和我的祖国.mp3">
-</audio></div>
+    发言讨论结束，请大家投票
+    <audio class="audio" controls="controls" autoplay="autoplay" ><source src="img/我和我的祖国.mp3">
+</audio>
+</div>
     <div class="vt2"><p>点击得票数最多的人的头像</p></div>
 <div class="card">
     <ul class="content">
