--- a/task7-3.html
+++ b/task7-3.html
@@ -37,30 +37,35 @@
             <li>
                 <div class="container">
                 <div class="row">
-                    <div class="col-xs-4">狙击手</div>
-                    <div class="col-xs-4">医生</div>
+                    <div class="col-xs-4">狙击手0人</div>
+                    <div class="col-xs-4">医生1人</div>
                     <div class="col-xs-4"></div>
                 </div>
             </div></li>
             <li>卧底词汇:爱新觉罗</li>
-            <li>水民词汇：努尔哈赤</li>
+            <li>水民词汇:努尔哈赤</li>
         </ul>
     </div>
     </div>
         <div class="down">
         <ul>
             <li>
-            <div><span class="first">第一天</span><span class="second">0小时07分</span></div>
+            <div><span class="first">第1天</span><span class="second">0小时07分</span></div>
                 <div>晚上：5号被杀手杀死，5号是水民</div>
                 <div>白天：8号被全民投票投死，8号是杀手</div>
             </li>
             <li>
-                <div><span class="first">第一天</span><span class="second">0小时07分</span></div>
+                <div><span class="first">第2天</span><span class="second">0小时07分</span></div>
                 <div>晚上：5号被杀手杀死，5号是水民</div>
                 <div>白天：8号被全民投票投死，8号是杀手</div>
             </li>
             <li>
-                <div><span class="first">第一天</span><span class="second">0小时07分</span></div>
+                <div><span class="first">第3天</span><span class="second">0小时07分</span></div>
+                <div>晚上：5号被杀手杀死，5号是水民</div>
+                <div>白天：8号被全民投票投死，8号是杀手</div>
+            </li>
+            <li>
+                <div><span class="first">第四天</span><span class="second">0小时07分</span></div>
                 <div>晚上：5号被杀手杀死，5号是水民</div>
                 <div>白天：8号被全民投票投死，8号是杀手</div>
             </li>
