--- a/task10.html
+++ b/task10.html
@@ -14,11 +14,11 @@
     <div class="login">
         <span class="phone">客服热线:010-594-78634</span>
         <span>
-            <a href="#">登录</a>
+            <a class="loginin" href="#">登录</a>
             <a class="signin" href="#">注册</a>
         </span>
     </div>
-    <div class="title">
+    <div class="title pull-right">
         <button type="button" class="btn btn-primary bt2">首页</button>
         <button type="button" class="btn btn-default bt1">在线定制</button>
         <button type="button" class="btn btn-default bt1">标准箱</button>
@@ -26,9 +26,9 @@
     </div>
 </header>
 <main>
-    <div class="self-order pull-right">
+    <div class="self-order">
     <div class="progress progress1">
-        <div class="progress-bar progress-bar-warning" role="progressbar"
+        <div class="progress-bar progress-bar-warning bar1" role="progressbar"
              aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
              style="width: 25%;">
             <span class="sr-only">20% 完成（警告）</span>
@@ -54,8 +54,8 @@
        </div>
     </div>
     <div class="orderbystep">
-    <h5><img src="img/圆角矩形9.png">请您按照以下步骤来定制您的纸箱</h5>
-        <div class="panel panel-default">
+        <h5><img src="img/borderblue.png"> 请您按照以下步骤来定制您的纸箱</h5>
+        <div class="panel panel-default noborder">
             <div class="panel-heading chosebox">
                 <img src="img/box.png">选择箱型
             </div>
@@ -79,19 +79,19 @@
             <div class="panel-body boxtype">
                 <div class="chosebox1">
                     <input type="radio" name="boxtype" id="wj" checked><label for="wj">外径</label>
-                    <span>长  <input type="text" class="size1">  mm</span>
-                    <span>宽  <input type="text" class="size1">  mm</span>
-                    <span>高  <input type="text" class="size1">  mm</span>
+                    <span class="length">长  <input type="text" class="size1">  mm</span>
+                    <span class="length">宽  <input type="text" class="size1">  mm</span>
+                    <span class="length">高  <input type="text" class="size1">  mm</span>
                 </div>
                 <div class="chosebox1">
                     <input type="radio" name="boxtype" id="nj" checked><label for="nj">内径</label>
-                    <span>长  <input type="text" class="size1">  mm</span>
-                    <span>宽  <input type="text" class="size1">  mm</span>
-                    <span>高  <input type="text" class="size1">  mm</span>
+                    <span class="length">长  <input type="text" class="size1">  mm</span>
+                    <span class="length">宽  <input type="text" class="size1">  mm</span>
+                    <span class="length">高  <input type="text" class="size1">  mm</span>
                 </div>
 
                 <div class="dropdown pull-right drop2">
-                    <button type="button" class="btn dropdown-toggle details" id="dropdownMenu1" data-toggle="dropdown">查看详情
+                    <button type="button" class="btn dropdown-toggle details1" id="dropdownMenu1" data-toggle="dropdown">查看详情
                         <span><img src="img/多边形11.png"></span>
                     </button>
                 </div>
@@ -104,10 +104,10 @@
             <div class="panel-body boxtype1">
                 <div class="chosebox3 pull-left">
                     <input type="checkbox" name="boxtype" id="rdo1" checked><label for="rdo1">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo2" checked><label for="rdo2">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo3" checked><label for="rdo3">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo4" checked><label for="rdo4">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo5" checked><label for="rdo5">三层A瓦优质</label>
+                    <input type="checkbox" name="boxtype" id="rdo2"><label for="rdo2">三层A瓦优质</label>
+                    <input type="checkbox" name="boxtype" id="rdo3"><label for="rdo3">三层A瓦优质</label>
+                    <input type="checkbox" name="boxtype" id="rdo4"><label for="rdo4">三层A瓦优质</label>
+                    <input type="checkbox" name="boxtype" id="rdo5"><label for="rdo5">三层A瓦优质</label>
                 </div>
                 <div></div>
                 <div class="dropdown pull-right">
@@ -145,6 +145,6 @@
         </div>
     </div>
 </footer>
-<div class="copyright">北京五一包装科技有限公司Copyright&copy2015   51baozhuang.com015 All rights reserved. 京icp备9999999-1 </div>
+<div class="copyright"><span>北京五一包装科技有限公司Copyright&copy2015 </span>  <span>51baozhuang.com015</span> <span>All rights reserved. 京icp备9999999-1 </span></div>
 </body>
 </html>
