--- a/task8-2.html
+++ b/task8-2.html
@@ -48,11 +48,11 @@
     </div>
 </header>
 <main>
-    <div class="firstpage">首页><span>合作企业</span></div>
 <div class="container maincontent">
     <div class="row">
-    <div class="col-lg-2 col-md-12 col-xs-12 nav1">
-        <ul class="hzqy">合作企业</ul>
+        <div class="firstpage">首页><span>合作企业</span></div>
+    <div class="col-lg-2 col-md-4 col-xs-12 nav1">
+        <ul class="hzqy"><p>合作企业</p></ul>
         <ul class="company">
             <li><a href="#">阿里巴巴</a></li>
             <li><a href="#">阿里巴巴</a></li>
@@ -67,7 +67,7 @@
             <li><a href="#">阿里巴巴</a></li>
         </ul>
     </div>
-        <div class="col-lg-9 col-md-12 col-xs-12 content1">
+        <div class="col-lg-8 col-md-8 col-xs-12 content1">
             <div class="title">
                 <span><img src="img/tudou.png"></span>
                 <span>土豆网公司成立于1998年11月， 是目前中国最大的互联网综合服务提供商之一，也是中国
