--- a/task8.html
+++ b/task8.html
@@ -107,75 +107,102 @@
      </div>
      </div>
         <h5>如何学习</h5>
-    <div class="howtolearn">
-    <div class="onetofour">
-        <div class="arrow">
-            <div class="num">
-                1
-            </div>
-            <div>匹配你现 在的个人情况
-                寻找适合自己的岗位</div>
-            <div><img src="img/形状拷贝2.png"></div>
-        </div>
-        <div class="arrow">
-            <div class="num">
-                2
-            </div>
-            <div>了解职业前景薪金待遇、
-                竞争压力等</div>
-            <div><img src="img/形状拷贝2.png"></div>
-        </div>
-        <div class="arrow">
-        <div class="num">
-            3
-        </div>
-        <div>掌握行业内顶级技能</div>
-        <div><img src="img/形状拷贝2.png"></div>
-    </div>
-        <div class="arrow">
-            <div class="num">
-               4
-            </div>
-            <div>查看职业目标任务</div>
-            <div><img src="img/形状拷贝2.png"></div>
-        </div>
-    </div>
-        <div class="onetofour">
-            <div class="arrow">
-                <div class="num">
-                    5
+    <div class="howtolearn"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>1</p>
+                        </div>
+                        <div>
+                            <p>匹配你现在的个人情况 寻找适合自己的岗位</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
                 </div>
-                <div>参考学习资源，掌握
-                    技能点，逐个完成任务</div>
-                <div><img src="img/形状拷贝2.png"></div>
-            </div>
-            <div class="arrow">
-                <div class="num">
-                    6
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>2</p>
+                        </div>
+                        <div>
+                            <p>了解职业前景薪金待遇、 竞争压力等</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
                 </div>
-                <div>加入班级，和小伙伴们
-                    互帮互助，一块学习</div>
-                <div><img src="img/形状拷贝2.png"></div>
-            </div>
-            <div class="arrow">
-                <div class="num">
-                    7
+                <div class="ccol-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>3</p>
+                        </div>
+                        <div class="zw">
+                            <p>掌握行业内顶级技能</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
                 </div>
-                <div>选择导师，一路引导，
-                    加速自己成长</div>
-                <div><img src="img/形状拷贝2.png"></div>
-            </div>
-            <div class="arrow">
-                <div class="num">
-                    8
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>4</p>
+                        </div>
+                        <div class="zw">
+                            <p>查看职业目标任务</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
                 </div>
-                <div>完成职业技能,升
-                    级业界大牛</div>
-                <div><img src="img/形状拷贝2.png"></div>
+            </div>
+            <div class="howtolearn1"></div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>5</p>
+                        </div>
+                        <div>
+                            <p>参考学习资源，掌握 技能点，逐个完成任务</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>6</p>
+                        </div>
+                        <div>
+                            <p>加入班级，和小伙伴们 互帮互助，一块学习</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>7</p>
+                        </div>
+                        <div>
+                            <p>选择导师，一路引导， 加速自己成长</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3">
+                    <div class="arrow">
+                        <div class="num">
+                            <p>8</p>
+                        </div>
+                        <div class="zw">
+                            <p>完成职业技能，升级业界大牛</p>
+                        </div>
+                        <div class="arrow1"></div>
+                    </div>
+                </div>
             </div>
         </div>
-
-    </div>
 
     <div class="show">
         <h5>优秀学员展示</h5>
@@ -236,15 +263,18 @@
             </div>
     </div>
     </div>
-<div class="cooperate">
+    <div class="cooperate"></div>
     <h5>战略合作企业</h5>
-     <div class="company">
+         <div class="container">
+             <div class="row">
+                 <div class="col-lg-12 company">
     <span><a><img src="img/alibaba.png"></a></span>
     <span><a><img src="img/jinshan.png"></a></span>
     <span><a><img src="img/huanqiu.png"></a></span>
     <span><a><img src="img/ronglian.png"></a></span>
     <span><a><img src="img/qiniu.png"></a></span>
-</div>
+         </div>
+         </div>
 </div>
     <div class="links">
         <h5>友情链接</h5>
