--- a/task8.html
+++ b/task8.html
@@ -45,7 +45,7 @@
     </div>
 </header>
 <main>
-     <div id="myCarousel" class="carousel slide">
+     <div id="myCarousel" class="carousel slide lunbotu">
          <!-- 轮播（Carousel）指标 -->
          <ol class="carousel-indicators">
              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -55,13 +55,13 @@
          <!-- 轮播（Carousel）项目 -->
          <div class="carousel-inner">
              <div class="item active">
-                 <img src="img/Image.jpg" alt="First slide">
+                 <img src="img/Image.jpg" class="imgw" alt="First slide">
              </div>
              <div class="item">
-                 <img src="img/Image.jpg" alt="Second slide">
+                 <img src="img/Image.jpg" class="imgw" alt="Second slide">
              </div>
              <div class="item">
-                 <img src="img/Image.jpg" alt="Third slide">
+                 <img src="img/Image.jpg"  class="imgw" alt="Third slide">
              </div>
          </div>
          <!-- 轮播（Carousel）导航 -->
