--- a/task8.html
+++ b/task8.html
@@ -11,22 +11,32 @@
 </head>
 <body>
 <header>
-    <div class="followus">
-        <span>客服热线:010-59478634</span>
-        <span><a class="wechat" href="#"></a>
-            <a class="qq" href="#"></a>
-            <a class="sina" href="#"></a>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-12 followus">
+                <span>客服热线:010-59478634</span>
+                <span class="pull-right"><a class="wechat" href="#"></a>
+                <a class="qq" href="#"></a>
+                <a class="sina" href="#"></a>
         </span>
+            </div>
+        </div>
     </div>
     <div class="login">
         <span class="login1"><a href="#">登录</a></span>
         <span><a href="#">注册</a></span>
     </div>
-    <div class="navigation">
-        <a href="https://bradmatt213.github.io/learngit/task8-2.html#" class="frontpage">关于</a>
-        <a href="https://bradmatt213.github.io/learngit/task8-3.html#">推荐</a>
-        <a href="https://bradmatt213.github.io/learngit/task8-3.html#">职业</a>
-        <a href="https://bradmatt213.github.io/learngit/task8.html">首页</a>
+    <div class="btl">
+    <div class="container navigation">
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-12">
+                <a href="https://bradmatt213.github.io/learngit/task8-2.html#" class="frontpage">关于</a>
+                <a href="https://bradmatt213.github.io/learngit/task8-3.html#">推荐</a>
+                <a href="https://bradmatt213.github.io/learngit/task8-3.html#">职业</a>
+                <a href="https://bradmatt213.github.io/learngit/task8.html">首页</a>
+            </div>
+        </div>
+    </div>
     </div>
     <div class="dp">
         <div class="dp-cell">
@@ -305,23 +315,27 @@
     </div>
 </main>
 <footer>
-    <div class="aboutus">
-        <div class="left1">
-            <p>技能树—改变你我</p>
-            <span class="cc2"><a href="#">关于我们</a> |
+    <div class="container">
+        <div class="row">
+        <div class="col-lg-12 aboutus">
+            <div class="left1">
+                <p>技能树—改变你我</p>
+                <span class="cc2"><a href="#">关于我们</a> |
             <a href="#">联系我们</a> |
                 <a href="#">合作企业</a></span>
-        </div>
-        <div class="middle1">
-         <p>旗下网站</p>
-            <span><a href="#">草船云孵化器</a>
+            </div>
+            <div class="middle1">
+                <p>旗下网站</p>
+                <span><a href="#">草船云孵化器</a>
             <a href="#">最强IT特训营</a></span>
-            <span><a href="#">葡萄藤轻游戏</a>
+                <span><a href="#">葡萄藤轻游戏</a>
             <a href="#">桌游精灵</a></span>
+            </div>
+            <div class="right1">
+                <p>微信公众平台</p>
+                <span class="cc1"><img src="img/erweima.png"></span>
+            </div>
         </div>
-        <div class="right1">
-        <p>微信公众平台</p>
-            <span class="cc1"><img src="img/erweima.png"></span>
         </div>
     </div>
     <div class="copyright">Copyright&copy 2015技能树 www.jnshu.com All Rights Reserved | 京ICP备 13005880号 </div>
