--- a/task10.html
+++ b/task10.html
@@ -103,11 +103,11 @@
             </div>
             <div class="panel-body boxtype1">
                 <div class="chosebox3 pull-left">
-                    <input type="checkbox" name="boxtype" id="rdo1" checked><label for="rdo1">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo2"><label for="rdo2">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo3"><label for="rdo3">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo4"><label for="rdo4">三层A瓦优质</label>
-                    <input type="checkbox" name="boxtype" id="rdo5"><label for="rdo5">三层A瓦优质</label>
+                    <input type="radio" name="boxtype" id="rdo1" checked><label for="rdo1">三层A瓦优质</label>
+                    <input type="radio" name="boxtype" id="rdo2"><label for="rdo2">三层A瓦优质</label>
+                    <input type="radio" name="boxtype" id="rdo3"><label for="rdo3">三层A瓦优质</label>
+                    <input type="radio" name="boxtype" id="rdo4"><label for="rdo4">三层A瓦优质</label>
+                    <input type="radio" name="boxtype" id="rdo5"><label for="rdo5">三层A瓦优质</label>
                 </div>
                 <div></div>
                 <div class="dropdown pull-right">
