--- a/task5.html
+++ b/task5.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <header>
-    <span class="pip"><a href="#" class="arrow">&lt;</a></span>
+    <span class="pip"><a href="#" class="arrow"></a></span>
     <span class="pip">个人主页</span>
     <span class="pip"></span>
 </header>
 <main>
     <div class="content">
         <div class="section">
-            <div class="head"><img src="img/head.png" alt=""/></div>
+            <div class="head"><img src="img/headpic.png" alt=""/></div>
             <div class="info">
                 <p class="name">高素雅 51岁</p>
                 <p class="location">北京・通州・果园</p>
@@ -28,22 +28,22 @@
                     <div class="formtag"><span>住家</span></div>
                     <div class="formtag">不含餐</div>
                 </li>
-                <li>
-                    <div class="formlabel">从业年限</div>
-                    <div class="formlabel1">0~3年</div>
+                <li class="formlabel">
+                    <div>从业年限</div>
+                    <div>0~3年</div>
                 </li>
-                <li>
-                    <div class="formlabel">工作时间</div>
-                    <div class="formlabel1">全天</div>
+                <li class="formlabel">
+                    <div>工作时间</div>
+                    <div>全天</div>
                 </li>
-                <li>
-                    <div class="formlabel">服务价格</div>
-                    <div class="formlabel1 text-important">25元/小时</div>
+                <li class="formlabel">
+                    <div>服务价格</div>
+                    <div>25元/小时</div>
                 </li>
-                <li>
-                    <div class="formlabel">自我介绍</div>
-                    <div class="formlabel1">
-                        <p>可以洗衣,做饭,照顾老人。在护工方面有五年经验，经验丰富</p>
+                <li class="formlabel">
+                    <div>自我介绍</div>
+                    <div>
+                        可以洗衣,做饭,照顾老人。在护工方面有五年经验，经验丰富
                     </div>
                 </li>
             </ul>
@@ -54,7 +54,5 @@
     <button class="footerleft">留言</button>
     <button class="footerright">电话联系</button>
 </footer>
-</body>
-</html>
 </body>
 </html>
