--- a/task12.html
+++ b/task12.html
@@ -18,7 +18,8 @@
 <main>
     <div class="content">
         <div class="section">
-            <div class="head"><img src="img/headpic.png" alt=""/></div>
+            <div class="head">
+                <img src="img/headpic.png" alt=""/></div>
             <div class="info">
                 <p class="name">高素雅 51岁</p>
                 <p class="location">北京・通州・果园</p>
@@ -28,23 +29,23 @@
             <div class="formtitle"><span>专业技能</span></div>
             <ul class="formlist">
                 <li class="require">
-                    <div class="formtag"><span>住家</span></div>
+                    <div class="formtag1"><span>住家</span></div>
                     <div class="formtag">不含餐</div>
                 </li>
                 <li class="lable">
-                    <span>从业年限</span>
+                    <span class="span1">从业年限</span>
                     <span>0~3年</span>
                 </li>
                 <li class="lable">
-                    <span>工作时间</span>
+                    <span class="span1">工作时间</span>
                     <span>全天</span>
                 </li>
                 <li class="lable">
-                    <span>服务价格</span>
-                    <span>25元/小时</span>
+                    <span class="span1">服务价格</span>
+                    <span class="red">25元/小时</span>
                 </li>
                 <li class="lable">
-                    <span>自我介绍</span>
+                    <span class="span1">自我介绍</span>
                      <span class="small">可以洗衣,做饭,照顾老人。在护工方面有五年经验，经验丰富</span>
                 </li>
             </ul>
@@ -52,8 +53,8 @@
     </div>
 </main>
 <footer>
-    <button class="footerleft">留言</button>
-    <button class="footerright">电话联系</button>
+    <div><button class="footerleft">留言</button></div>
+    <div><button class="footerright">电话联系</button></div>
 </footer>
 </body>
 </html>
