--- a/task.html
+++ b/task.html
@@ -16,7 +16,7 @@
     <a href="https://bradmatt213.github.io/learngit/task7-2">任务七-2</a>
     <a href="https://bradmatt213.github.io/learngit/task7-3">任务七-3</a>
     <a href="https://bradmatt213.github.io/learngit/task8">任务八</a>
-    <a href="https://bradmatt213.github.io/learngit/task8">任务八</a>
+    <a href="https://bradmatt213.github.io/learngit/task8">任务九</a>
     <a href="https://bradmatt213.github.io/learngit/task10">任务十</a>
     <a href="https://bradmatt213.github.io/learngit/task11">任务十一</a>
     <a href="https://bradmatt213.github.io/learngit/task12">任务十二</a>
