--- a/task4.html
+++ b/task4.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <a href="#" class="a2">注册</a>
-    <a href="#" class="a3">登录</a>
+    <a href="#" class="a3">登陆</a>
         <a href="#" class="a1">关闭</a>
 
 </header>
@@ -18,7 +18,7 @@
     <form class="login">
         <div class="login1"><input type="text" placeholder="请输入手机号"/></div>
         <div class="login1"><input type="password" placeholder="请输入密码"/></div>
-        <button class="button1">登录</button>
+        <button class="button1">登&nbsp;&nbsp;&nbsp;&nbsp;陆</button>
         <p class="code"><a href="">忘记密码</a></p>
     </form>
 </div>
