--- a/task4.html
+++ b/task4.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <header>
-    <a href="#" class="a2">注册</a>
-    <a href="#" class="a3">登陆</a>
-        <a href="#" class="a1">关闭</a>
-
+    <span class="a1">关闭</span>
+    <span class="a2">注册</span>
+    <span class="a3">登陆</span>
+    <div class="clear"></div>
 </header>
 <main>
 <div class="content">
