--- a/task2-js.html
+++ b/task2-js.html
@@ -7,7 +7,8 @@
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/hover.css">
-    <link rel="stylesheet" type="text/css" href="css/task2-js.css"/>
+    <script src="js/task2.js"></script>
+    <link rel="stylesheet" href="css/task2-js.css">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
