--- a/task2-js.html
+++ b/task2-js.html
@@ -9,7 +9,7 @@
     <script src="js/task2.js"></script>
 </head>
 <body>
-<header><span><img src="img/Backicon.png" alt=""></span>
+<header><span><button onclick="jumpback()"></button><img src="img/Backicon.png" alt=""></span>
     <span>参数设置</span>
     <span><img src="img/circledhelp.png" alt=""></span></header>
 <main>
