--- a/task3-js.html
+++ b/task3-js.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/task3-js.css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/task2.js"></script>
+    <script src="js/task3.js"></script>
 </head>
 <body>
 <header><span><button onclick="jump()"></button><img src="img/Backicon.png" alt=""></span>
@@ -19,6 +19,7 @@
         <div class="yellowbc">
         <input type="button" value="1" id="num">
     <div class="icon"><img src="img/myking.png" id="icon"></div>
+     <div class="matt"></div>
     </div>
 </div>
     <input type="button" class="fanpai" value="查看一号玩家的身份" id="fanpai" onclick="fapai()">
