--- a/task10-1.html
+++ b/task10-1.html
@@ -22,7 +22,7 @@
             <a class="signin" href="#">注册</a>
         </span>
     </div>
-    <div class="title pull-right">
+    <div class="title">
         <button type="button" class="btn btn-primary bt2">首页</button>
         <button type="button" class="btn btn-default bt1">在线定制</button>
         <button type="button" class="btn btn-default bt1">标准箱</button>
@@ -152,6 +152,6 @@
         </div>
     </div>
 </footer>
-<div class="copyright"><span>北京五一包装科技有限公司Copyright&copy2015 </span>  <span>51baozhuang.com015</span> <span>All rights reserved. 京icp备9999999-1 </span></div>
+<div class="copyright"><span>北京五一包装科技有限公司Copyright&copy2015 </span>  <span>51baozhuang.com</span> <span>All rights reserved. 京icp备9999999-1 </span></div>
 </body>
 </html>
