--- a/task-12-2.html
+++ b/task-12-2.html
@@ -100,7 +100,7 @@
         </ul>
     </div>
     <footer>
-        <a class="back" href="#">首页</a>
+        <a class="back" href="https://bradmatt213.github.io/learngit/task12" >首页</a>
         <a class="write" href="#"></a>
         <a class="mine" href="#">我的</a>
     </footer>
