--- a/task12.html
+++ b/task12.html
@@ -19,7 +19,7 @@
     <div class="content">
         <div class="section">
             <div class="head">
-                <img src="img/headpic.png" alt=""/></div>
+                <img src="img/headpic.png" class="img-responsive"></div>
             <div class="info">
                 <p class="name">高素雅 51岁</p>
                 <p class="location">北京・通州・果园</p>
@@ -53,8 +53,8 @@
     </div>
 </main>
 <footer>
-    <div><button class="footerleft">留言</button></div>
-    <div><button class="footerright">电话联系</button></div>
+    <div><button class="footerleft" onclick="window.location.href='https://bradmatt213.github.io/learngit/task-12-2'">留言</button></div>
+    <div><button class="footerright" onclick="window.location.href='https://bradmatt213.github.io/learngit/task-12-2'"  >电话联系</button></div>
 </footer>
 </body>
 </html>
