--- a/task13-2.html
+++ b/task13-2.html
@@ -26,14 +26,14 @@
         <ul>
             <li>本次游戏共计用时0小时25分钟</li>
             <li class="count1">
-                        <div>杀手0人</div>
+                        <div>杀手0人&#12288;</div>
                         <div>警察1人</div>
                         <div>平民6人</div>
             </li>
             <li class="count1">
-                        <span>狙击手0人</span>
-                 <span>医生1人&#12288;</span>
-                <span>&#12288;&#12288;&#12288;</span>
+                <div>狙击手0人</div>
+                <div class="sec">医生0人</div>
+                <div>&#12288;&#12288;&#12288;&#12288;</div>
             </li>
             <li>卧底词汇:爱新觉罗</li>
             <li>水民词汇:努尔哈赤</li>
@@ -63,14 +63,14 @@
                 <div>白天：8号被全民投票投死，8号是杀手</div>
             </li>
             <li>
-                <div class="emi"><span class="first">第一天</span><span class="second">0小时07分</span></div>
+                <div class="emi"><span class="first">第五天</span><span class="second">0小时07分</span></div>
                 <div>晚上：5号被杀手杀死，5号是水民</div>
                 <div>白天：8号被全民投票投死，8号是杀手</div>
             </li>
         </ul>
     </div>
 <div class="footer_3">
-    <button class="bt1 btn btn-default">再来一局</button><button class="bt2 btn btn-default">上传并分享</button>
+    <button class="bt1 btn btn-default" onclick="window.location.href='https://bradmatt213.github.io/learngit/task13'">再来一局</button><button class="bt2 btn btn-default">上传并分享</button>
 </div>
 </body>
 </html>
