--- a/task13-1.html
+++ b/task13-1.html
@@ -7,6 +7,7 @@
     <title>task13</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/task13-2.css"/>
+    <script src="js/task13-1.js"></script>
 </head>
 <body>
 <header>
@@ -17,138 +18,139 @@
     </div>
     <div class="vote">
         <span class="item1">发言讨论结束，请大家投票</span>
-        <span class="item2"><a href=""></a></span></div>
+        <audio src="img/我和我的祖国.mp3" controls="controls" preload id="music1" class="hidden"></audio></div>
+    <input type="button" class="clickbutton" onclick="bf()">
     <div class="click"><span class="triangele"></span>
         <p>点击得票人数最多的人的头像</p>
     </div>
 </header>
 
-    <div class="card">
-        <ul class="content">
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">1号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">2号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">警察</p>
-                <p class="num">3号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">法官</p>
-                <p class="num">4号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">狙击手</p>
-                <p class="num">5号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">医生</p>
-                <p class="num">6号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">杀手</p>
-                <p class="num">7号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">8号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">9号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">1号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">1号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-            <li class="card1">
-                <p class="name">水民</p>
-                <p class="num">1号</p>
-                <div class="wrap">
-                    <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
-                    <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
-                    <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
-                    <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
-                </div>
-            </li>
-        </ul>
-    </div>
+<div class="card">
+    <ul class="content">
+        <li class="card1">
+            <div class="name"><p>水民</p></div>
+            <div class="num">1号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">水民</div>
+            <div class="num">2号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">警察</div>
+            <div class="num">3号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name"><p>水民</p></div>
+            <div class="num">1号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">水民</div>
+            <div class="num">2号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">警察</div>
+            <div class="num">3号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name"><p>水民</p></div>
+            <div class="num">1号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">水民</div>
+            <div class="num">2号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">警察</div>
+            <div class="num">3号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">警察</div>
+            <div class="num">3号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">警察</div>
+            <div class="num">3号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+        <li class="card1">
+            <div class="name">警察</div>
+            <div class="num">3号</div>
+            <div class="wrap">
+                <a href="#" class="select1"><img class="photo1" src="img/io1.png" alt="1"></a>
+                <a href="#" class="select2"><img class="photo2" src="img/io2.png" alt="1"></a>
+                <a href="#" class="select3"><img class="photo3" src="img/io5.png" alt="1"></a>
+                <a href="#" class="select4"><img class="photo4" src="img/io3.png" alt="1"></a>
+            </div>
+        </li>
+    </ul>
+</div>
 <footer>
-    <button class="f3 btn btn-default">投死</button>
+    <button class="f3 btn btn-default" onclick="jump()">投死</button>
 </footer>
 </body>
 </html>
