--- a/task-12-2.html
+++ b/task-12-2.html
@@ -18,7 +18,7 @@
         <div class="dp-cell">
             <ul class="nav nav-pills nav-justified">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">所在地</a>
+                    <div class="dropdown-toggle" data-toggle="dropdown" href="#">所在地</div>
                     <ul class="scc dropdown-menu">
                         <li><a href="#">北京</a></li>
                         <li><a href="#">通州</a></li>
@@ -30,7 +30,7 @@
         <div class="dp-cell">
             <ul class="nav nav-pills nav-justified">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">食宿</a>
+                    <div class="dropdown-toggle" data-toggle="dropdown" href="#">食宿</div>
                     <ul class="scc dropdown-menu">
                         <li><a href="#">管吃</a></li>
                         <li><a href="#">管住</a></li>
@@ -42,7 +42,7 @@
         <div class="dp-cell">
             <ul class="nav nav-pills nav-justified">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">病人情况</a>
+                    <div class="dropdown-toggle" data-toggle="dropdown" href="#">病人情况</div>
                     <ul class="scc dropdown-menu">
                         <li><a href="#">老人</a></li>
                         <li><a href="#">小孩</a></li>
@@ -100,9 +100,9 @@
         </ul>
     </div>
     <footer>
-        <a class="back" href="https://bradmatt213.github.io/learngit/task12" >首页</a>
-        <a class="write" href="#"></a>
-        <a class="mine" href="#">我的</a>
+        <div class="front"><img src="img/home.png" class="img-responsive">首页</div>
+        <div class="write"><img src="img/write%20(2).png" class="img-responsive"></div>
+        <div class="mine"><img src="img/mine.png" class="img-responsive">我的</div>
     </footer>
 </body>
 </html>
