--- a/task12.html
+++ b/task12.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header>
-    <span class="pip"><a href="#" class="arrow"><img src="img/arrow.png"></a></span>
+    <span class="pip"><a href="#" class="arrow"><img src="img/arrow.png" class="arrow"></a></span>
     <span class="frontpage">个人主页</span>
     <span class="pip"></span>
 </header>
@@ -29,8 +29,8 @@
             <div class="formtitle"><span>专业技能</span></div>
             <ul class="formlist">
                 <li class="require">
-                    <div class="formtag1"><span>住家</span></div>
-                    <div class="formtag">不含餐</div>
+                    <div class="formtag1"><span><img src="img/starbig.png" alt=""> 住家</span></div>
+                    <div class="formtag"><span><img src="img/starbig.png" alt=""> 不含餐</span></div>
                 </li>
                 <li class="lable">
                     <span class="span1">从业年限</span>
@@ -53,8 +53,8 @@
     </div>
 </main>
 <footer>
-    <div><button class="footerleft" onclick="window.location.href='https://bradmatt213.github.io/learngit/task-12-2'">留言</button></div>
-    <div><button class="footerright" onclick="window.location.href='https://bradmatt213.github.io/learngit/task-12-2'"  >电话联系</button></div>
+    <button class="footerleft" onclick="window.location.href='https://bradmatt213.github.io/learngit/task-12-2'">留言</button>
+    <button class="footerright" onclick="window.location.href='https://bradmatt213.github.io/learngit/task-12-2'"  >电话联系</button>
 </footer>
 </body>
 </html>
