--- a/task-12-2.html
+++ b/task-12-2.html
@@ -99,10 +99,20 @@
         </li>
         </ul>
     </div>
-    <footer>
-        <div class="front"><img src="img/home.png" class="img-responsive">首页</div>
-        <div class="write"><img src="img/write%20(2).png" class="img-responsive"></div>
-        <div class="mine"><img src="img/mine.png" class="img-responsive">我的</div>
-    </footer>
+    <nav class="navbar navbar-fixed-bottum" role="navigation">
+        <div class="navbar-footer">
+            <button type="button" class="btn footer_leftbutton">
+                <img src="img/home.png" alt="" class="footer leftimg">
+                <p>首页</p>
+            </button>
+            <button type="button" class="btn footer_centerbutton">
+                <img src="img/write%20(2).png" alt="" class="footer centerimg">
+            </button>
+            <button type="button" class="btn footer_rightbutton">
+                <img src="img/mine.png" alt="" class="footer rightimg">
+                <p>我的</p>
+            </button>
+
+        </div>
 </body>
 </html>
