--- a/task-12-2.html
+++ b/task-12-2.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/task-12-2.css"/>
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet/less" href="less/task-12-2.less"/>
+    <script src="http://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
     <header>
