--- a/task12.html
+++ b/task12.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/task12.css"/>
+    <link rel="stylesheet/less" href="less/task12.less"/>
+    <script src="http://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
 <header>
