--- a/task2-js.html
+++ b/task2-js.html
@@ -20,7 +20,7 @@
                 <ul></ul>
             </div>
             <div>
-                <button onclick="appendText()" class="btns">点击设置 <i class="fa fa-pencil"></i></button>
+                <button id="set" class="btns">点击设置 <i class="fa fa-pencil"></i></button>
             </div>
         </div>
     </div>
