--- a/task4-2.html
+++ b/task4-2.html
@@ -22,10 +22,10 @@
         <div class="process">
             <div class="left"></div>
             <div class="right">
-                <div><span><img src="img/moon.png" alt=""></span><span class="triangle"></span><button>杀手杀人</button></div>
-                <div><span><img src="img/sun.png" alt=""></span><span class="triangle"></span><button>亡灵发表遗言</button></div>
-                <div><span></span><span class="triangle lef"></span><button class="lf">玩家依次发表遗言</button></div>
-                <div><span></span><span class="triangle lef"></span><button class="lf">投票</button></div>
+                <div><span><img src="img/moon.png" alt=""></span><span class="triangle"></span><button id="step1">杀手杀人</button></div>
+                <div><span><img src="img/sun.png" alt=""></span><span class="triangle"></span><button id="step2">亡灵发表遗言</button></div>
+                <div><span></span><span class="triangle lef"></span><button class="lf" id="step3">玩家依次发表遗言</button></div>
+                <div><span></span><span class="triangle lef"></span><button class="lf" id="step4">投票</button></div>
 
             </div>
         </div>
