--- a/task4-2.html
+++ b/task4-2.html
@@ -17,8 +17,8 @@
     <span><img src="img/close.png" alt=""></span></header>
 <main>
     <div>
-        <div class="day">第一天</div>
-        <button onclick="aliveordead()"></button>
+        <div class="day">第<span class="daytime"></span>天</div>
+        <button class="startgame" onclick="aliveordead()">开始游戏</button>
         <div class="process">
             <div class="left"></div>
             <div class="right">
