--- a/task4-vote.html
+++ b/task4-vote.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>法官查看</title>
+    <title>投票</title>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/task4.css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/task4-kill.js"></script>
+    <script src="js/task4-vote.js"></script>
 </head>
 <body>
 <header><span><button></button><img src="img/Backicon.png" alt=""></span>
-    <span>杀手杀人</span>
+    <span>请投票</span>
     <span><img src="img/close.png" alt=""></span></header>
 <div class="card">
     <ul class="content">
