--- a/CSShtml/task7-3.html
+++ b/CSShtml/task7-3.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/task7-3.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/task7-3.css"/>
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-</head>
+    <script src="../js/task7.js"></script>
 <body>
 <header>
 <a class="homebutton"></a>
@@ -78,7 +77,7 @@
     </div>
 </main>
 <footer>
-<button class="bt1 btn btn-default">再来一局</button><button class="bt2 btn btn-default">上传并分享</button>
+<button class="bt1 btn btn-default" onclick="jumpback()">再来一局</button><button class="bt2 btn btn-default" onclick="jumpback()">上传并分享</button>
 </footer>
 </body>
 </html>
